add link to graphs

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="./css/storyStyles.css">
     <link rel="stylesheet" href="./css/threejsStyles.css">
     <link rel="stylesheet" href="./css/imageSlider.css">
-
+    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
     <title>Neuperlach, Munich</title>
@@ -178,7 +178,9 @@
                         <p id="description81" data-first-key="title6" data-second-key="para1"></p>
                         <p id="description82" data-first-key="title6" data-second-key="para2"></p>
                         <p id="description83" data-first-key="title6" data-second-key="para2"></p>
-
+                        <div class="urlLinks">
+                            <p>Read more: <a href="./graphs.html" id="link1">Graphs and Diagrams</a></p>
+                        </div>
                     </div>
                     <!-- Scroll to Top -->
                     <button class="scrollToTopButton" onclick="scrollToTop()">
